--- a/WpfApp1/Community.xaml
+++ b/WpfApp1/Community.xaml
@@ -37,7 +37,9 @@
                                          Padding="10"
                                          Text="Write something..."
                                          BorderThickness="0"
-                                         Margin="0,0,0,10" TextChanged="WritePostTextBox_TextChanged"/>
+                                         Margin="0,0,0,10"
+                                         GotFocus="WriteTextBox_GotFocus"
+                                         LostFocus="WriteTextBox_LostFocus"/>
                                 <!--<Component:WriteBar x:Name="writebar"/>-->
                                 <!-- Image and Video Buttons -->
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,10">
