--- a/WpfApp1/Component/Sidebar.xaml
+++ b/WpfApp1/Component/Sidebar.xaml
@@ -9,23 +9,28 @@
     <Border Background="#00029F" Width="250" CornerRadius="0,40,40,0" HorizontalAlignment="Left">
         <DockPanel LastChildFill="True">
             <StackPanel DockPanel.Dock="Top" Margin="10">
-                <TextBlock HorizontalAlignment="Center" FontSize="24" FontWeight="Bold" Foreground="White" Margin="0, 10, 0, 15">
-            <Run Text="Patch"/>
-            <Run Text="UP" Foreground="#00EDFA"/>
-                </TextBlock>
-
-                <Separator Background="Gray" Height="5"/>
-
-                <StackPanel Orientation="Horizontal" Margin="0,20,0,20" HorizontalAlignment="Left">
-                    <Image Source="../icon/profile.png" Width="60" Height="60" Margin="10,0,10,0">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <!-- Image -->
+                    <Image x:Name="ProfileImage" Source="/icon/LogoPatchUP.png" Width="40" Height="40" Stretch="UniformToFill">
                         <Image.Clip>
-                            <EllipseGeometry RadiusX="30" RadiusY="30" Center="30,30"/>
+                            <EllipseGeometry Center="50,50" RadiusX="70" RadiusY="70"/>
                         </Image.Clip>
                     </Image>
 
-                    <StackPanel VerticalAlignment="Center">
-                        <TextBlock Name="ProfileName" Text="Robert Fox" Foreground="White" FontWeight="Bold" Margin="0, 0, 0, 5"/>
-                        <Button Content="View Profile" Foreground="White" FontSize="12" Background="Transparent" BorderThickness="0" Click="ProfileClick"/>
+                    <!-- TextBlock -->
+                    <TextBlock VerticalAlignment="Center" FontSize="24" FontWeight="Bold" Foreground="White" Margin="10, 0, 0, 0">
+        <Run Text="Patch"/>
+        <Run Text="UP" Foreground="#00EDFA"/>
+                    </TextBlock>
+                </StackPanel>
+
+
+                <Separator Background="Gray" Height="5"/>
+
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,20" HorizontalAlignment="Left">
+                    <StackPanel Width="223">
+                        <TextBlock x:Name="ProfileName" Text="Robert Fox" Foreground="White" FontWeight="Bold" Margin="0, 0, 0, 5" HorizontalAlignment="Center"/>
+                        <Button Content="View Profile" Foreground="White" FontSize="12" Background="Transparent" BorderThickness="0" Click="ProfileClick" Margin="0,0,0,10"/>
                         <Border BorderBrush="White" BorderThickness="0,0,0,0.5" Width="Auto"/>
                     </StackPanel>
                 </StackPanel>
