--- a/WpfApp1/Home.xaml
+++ b/WpfApp1/Home.xaml
@@ -54,7 +54,7 @@
                                 <StackPanel Margin="15">
                                     <Image Source="/icon/book.png" Width="60" Height="60" Margin="0,0,0,20" HorizontalAlignment="Left"/>
                                     <TextBlock Text="Tutorial" FontSize="18" FontWeight="Bold" Foreground="#32324D" />
-                                    <TextBlock Text="Simplify your decisions through our Smart Menu Assistant who will help you."
+                                    <TextBlock Text="Provides step-by-step guides to help users repair electronic devices, furniture, and household equipment."
                        FontSize="14" Foreground="#6F6F80" TextWrapping="Wrap" Margin="0,5,0,0"/>
                                 </StackPanel>
 
@@ -83,7 +83,7 @@
                                 <StackPanel Margin="15">
                                     <Image Source="/icon/book.png" Width="60" Height="60" Margin="0,0,0,20" HorizontalAlignment="Left"/>
                                     <TextBlock Text="Community" FontSize="18" FontWeight="Bold" Foreground="#32324D"/>
-                                    <TextBlock Text="Simplify your decisions through our Smart Menu Assistant who will help you."
+                                    <TextBlock Text="A space to share repair experiences, tips, and ideas."
                        FontSize="14" Foreground="#6F6F80" TextWrapping="Wrap" Margin="0,5,0,0"/>
                                 </StackPanel>
 
@@ -111,7 +111,7 @@
                             <StackPanel Margin="15">
                                 <Image Source="/icon/book.png" Width="60" Height="60" Margin="0,0,0,20" HorizontalAlignment="Left"/>
                                 <TextBlock Text="Chatbot" FontSize="18" FontWeight="Bold" Foreground="#32324D" />
-                                <TextBlock Text="If you already know what to order, this is the best choice."
+                                    <TextBlock Text="An AI-powered assistant to help users quickly find relevant tutorials and troubleshoot repair issues."
                                FontSize="14" Foreground="#6F6F80" TextWrapping="Wrap" Margin="0,5,0,0"/>
                             </StackPanel>
                                 <Button Background="Transparent" BorderThickness="0" Click="BtnChatbotClick">
